--- a/app.json
+++ b/app.json
@@ -1,16 +1,17 @@
 {
-  "name": "Roblox to discord",
-  "description": "A way to allow roblox to communicate with Discord via webserver.",
-  "repository": "https://github.com/CookieHax/RobloxToDiscord",
-  "keywords": ["Python", "Fastapi", "Webserver"]
-  "env": {
-    "Website_Api": {
-      "description": "A way to protect your website with a simple key",
-      "generator": "secret"
-  },
-  "env": {
-    "Discord_Webhook": {
-      "description": "A way to message discord with your webhook",
-      "generator": "secret"
-  },
-}
+    "name": "Roblox to discord",
+    "description": "A way to allow roblox to communicate with Discord via webserver.",
+    "repository": "https://github.com/CookieHax/RobloxToDiscord",
+    "keywords": ["Python", "Fastapi", "Webserver"],
+    "env": {
+      "Website_Api": {
+        "description": "A way to protect your website with a simple key",
+        "generator": "secret"
+    },
+    "env": {
+      "Discord_Webhook": {
+        "description": "A way to message discord with your webhook",
+        "generator": "secret"
+    }
+    }
+}}
