--- a/app.json
+++ b/app.json
@@ -3,15 +3,12 @@
     "description": "A way to allow roblox to communicate with Discord via webserver.",
     "repository": "https://github.com/CookieHax/RobloxToDiscord",
     "keywords": ["Python", "Fastapi", "Webserver"],
-    "env": {
-      "Website_Api": {
+    "Website_Api": {
         "description": "A way to protect your website with a simple key",
-        "generator": "value"
+        "generator": "secret"
     },
-    "env": {
-      "Discord_Webhook": {
+    "Discord_Webhook": {
         "description": "A way to message discord with your webhook",
-        "generator": "value"
+        "generator": "secret"
     }
-    }
-}}
+}
