--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
             "description": "A way to message discord with your webhook."
         },
         "Auth_key": {
-            "description": "This is how the .env communications"
+            "description": "This is how the .env communications",
             "generator": "secret"
         }
     }
