--- a/app.json
+++ b/app.json
@@ -9,14 +9,10 @@
     ],
     "env": {
         "Discord_Webhook": {
-            "description": "A way to protect your website with a simple key"
+            "description": "Store your discord webhook link in this!"
         },
         "Website_Api": {
-            "description": "A way to message discord with your webhook."
-        },
-        "Auth_key": {
-            "description": "This is how the .env communications",
-            "generator": "secret"
+            "description": "A way to protect your website with a simple key."
         }
     }
 }
